--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -12,7 +12,8 @@
             </intent-filter>
         </activity>
 
-    </application>
+    <activity android:name="About" android:label="@string/about_title"></activity>
+</application>
     <uses-sdk android:minSdkVersion="5" />
 
 </manifest> 
