refactored SideOut, made SetScore it's own activity proper

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -18,9 +18,8 @@
       android:theme="@android:style/Theme.Dialog" />
       
     <activity 
-      android:name="Keypad" 
-      android:label="@string/keypad_title" 
-      android:theme="@android:style/Theme.Dialog" />
+      android:name="SetScore" 
+      android:label="@string/set_score_title"  />
       
     <uses-sdk android:minSdkVersion="5" />
   </application>
